packages/er-gen-core/src/x007007007/er/parser/antlr/generated/PlantUMLERParser.py
# Generated from /Users/xxc/workspace/er-generate-model-main/src/x007007007/er/parser/antlr/PlantUMLER.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PlantUMLERParser ( Parser ):

    grammarFileName = "PlantUMLER.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "':'", "'<<'", "'>>'", "','", 
                     "'-'", "'@startuml'", "'@enduml'", "'entity'", "'class'", 
                     "'as'", "'*'", "'+'", "<INVALID>", "'||--||'", "<INVALID>", 
                     "<INVALID>", "'}o--||'", "'--'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "STARTUML", "ENDUM", "ENTITY", "CLASS", "AS", "PK_MARKER", 
                      "VISIBILITY_MARKER", "CARDINALITY", "ONE_TO_ONE", 
                      "ONE_TO_MANY", "MANY_TO_MANY", "MANY_TO_ONE", "SIMPLE_RELATION", 
                      "IDENTIFIER", "STRING", "WS", "NEWLINE", "COMMENT", 
                      "ENDUML" ]

    RULE_diagram = 0
    RULE_invalidLine = 1
    RULE_entityDef = 2
    RULE_entityName = 3
    RULE_entityAlias = 4
    RULE_columnDef = 5
    RULE_columnMarkers = 6
    RULE_columnName = 7
    RULE_columnType = 8
    RULE_columnStereotype = 9
    RULE_stereotypeContent = 10
    RULE_relationship = 11
    RULE_cardinality = 12
    RULE_relationSymbol = 13
    RULE_relationshipLabel = 14
    RULE_relationshipLabelText = 15

    ruleNames =  [ "diagram", "invalidLine", "entityDef", "entityName", 
                   "entityAlias", "columnDef", "columnMarkers", "columnName", 
                   "columnType", "columnStereotype", "stereotypeContent", 
                   "relationship", "cardinality", "relationSymbol", "relationshipLabel", 
                   "relationshipLabelText" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    STARTUML=8
    ENDUM=9
    ENTITY=10
    CLASS=11
    AS=12
    PK_MARKER=13
    VISIBILITY_MARKER=14
    CARDINALITY=15
    ONE_TO_ONE=16
    ONE_TO_MANY=17
    MANY_TO_MANY=18
    MANY_TO_ONE=19
    SIMPLE_RELATION=20
    IDENTIFIER=21
    STRING=22
    WS=23
    NEWLINE=24
    COMMENT=25
    ENDUML=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DiagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STARTUML(self):
            return self.getToken(PlantUMLERParser.STARTUML, 0)

        def ENDUM(self):
            return self.getToken(PlantUMLERParser.ENDUM, 0)

        def EOF(self):
            return self.getToken(PlantUMLERParser.EOF, 0)

        def entityDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PlantUMLERParser.EntityDefContext)
            else:
                return self.getTypedRuleContext(PlantUMLERParser.EntityDefContext,i)


        def relationship(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PlantUMLERParser.RelationshipContext)
            else:
                return self.getTypedRuleContext(PlantUMLERParser.RelationshipContext,i)


        def invalidLine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PlantUMLERParser.InvalidLineContext)
            else:
                return self.getTypedRuleContext(PlantUMLERParser.InvalidLineContext,i)


        def getRuleIndex(self):
            return PlantUMLERParser.RULE_diagram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiagram" ):
                listener.enterDiagram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiagram" ):
                listener.exitDiagram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiagram" ):
                return visitor.visitDiagram(self)
            else:
                return visitor.visitChildren(self)




    def diagram(self):

        localctx = PlantUMLERParser.DiagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_diagram)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(PlantUMLERParser.STARTUML)
            self.state = 38
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 36
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                    if la_ == 1:
                        self.state = 33
                        self.entityDef()
                        pass

                    elif la_ == 2:
                        self.state = 34
                        self.relationship()
                        pass

                    elif la_ == 3:
                        self.state = 35
                        self.invalidLine()
                        pass

             
                self.state = 40
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 41
            self.match(PlantUMLERParser.ENDUM)
            self.state = 42
            self.match(PlantUMLERParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InvalidLineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PlantUMLERParser.IDENTIFIER, 0)

        def ONE_TO_ONE(self):
            return self.getToken(PlantUMLERParser.ONE_TO_ONE, 0)

        def ONE_TO_MANY(self):
            return self.getToken(PlantUMLERParser.ONE_TO_MANY, 0)

        def MANY_TO_MANY(self):
            return self.getToken(PlantUMLERParser.MANY_TO_MANY, 0)

        def MANY_TO_ONE(self):
            return self.getToken(PlantUMLERParser.MANY_TO_ONE, 0)

        def WS(self):
            return self.getToken(PlantUMLERParser.WS, 0)

        def NEWLINE(self):
            return self.getToken(PlantUMLERParser.NEWLINE, 0)

        def COMMENT(self):
            return self.getToken(PlantUMLERParser.COMMENT, 0)

        def STARTUML(self):
            return self.getToken(PlantUMLERParser.STARTUML, 0)

        def ENDUML(self):
            return self.getToken(PlantUMLERParser.ENDUML, 0)

        def ENTITY(self):
            return self.getToken(PlantUMLERParser.ENTITY, 0)

        def CLASS(self):
            return self.getToken(PlantUMLERParser.CLASS, 0)

        def AS(self):
            return self.getToken(PlantUMLERParser.AS, 0)

        def STRING(self):
            return self.getToken(PlantUMLERParser.STRING, 0)

        def CARDINALITY(self):
            return self.getToken(PlantUMLERParser.CARDINALITY, 0)

        def getRuleIndex(self):
            return PlantUMLERParser.RULE_invalidLine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInvalidLine" ):
                listener.enterInvalidLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInvalidLine" ):
                listener.exitInvalidLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvalidLine" ):
                return visitor.visitInvalidLine(self)
            else:
                return visitor.visitChildren(self)




    def invalidLine(self):

        localctx = PlantUMLERParser.InvalidLineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_invalidLine)
        self._la = 0 # Token type
        try:
            self.state = 46
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.match(PlantUMLERParser.IDENTIFIER)
                pass
            elif token in [4, 5, 6, 7, 9, 13, 14, 20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                _la = self._input.LA(1)
                if _la <= 0 or (((_la) & ~0x3f) == 0 and ((1 << _la) & 133143822) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entityName(self):
            return self.getTypedRuleContext(PlantUMLERParser.EntityNameContext,0)


        def ENTITY(self):
            return self.getToken(PlantUMLERParser.ENTITY, 0)

        def CLASS(self):
            return self.getToken(PlantUMLERParser.CLASS, 0)

        def entityAlias(self):
            return self.getTypedRuleContext(PlantUMLERParser.EntityAliasContext,0)


        def columnDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PlantUMLERParser.ColumnDefContext)
            else:
                return self.getTypedRuleContext(PlantUMLERParser.ColumnDefContext,i)


        def getRuleIndex(self):
            return PlantUMLERParser.RULE_entityDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntityDef" ):
                listener.enterEntityDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntityDef" ):
                listener.exitEntityDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntityDef" ):
                return visitor.visitEntityDef(self)
            else:
                return visitor.visitChildren(self)




    def entityDef(self):

        localctx = PlantUMLERParser.EntityDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_entityDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            _la = self._input.LA(1)
            if not(_la==10 or _la==11):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 49
            self.entityName()
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 50
                self.entityAlias()


            self.state = 53
            self.match(PlantUMLERParser.T__0)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2121728) != 0):
                self.state = 54
                self.columnDef()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(PlantUMLERParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PlantUMLERParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return PlantUMLERParser.RULE_entityName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntityName" ):
                listener.enterEntityName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntityName" ):
                listener.exitEntityName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntityName" ):
                return visitor.visitEntityName(self)
            else:
                return visitor.visitChildren(self)




    def entityName(self):

        localctx = PlantUMLERParser.EntityNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_entityName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(PlantUMLERParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityAliasContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AS(self):
            return self.getToken(PlantUMLERParser.AS, 0)

        def STRING(self):
            return self.getToken(PlantUMLERParser.STRING, 0)

        def getRuleIndex(self):
            return PlantUMLERParser.RULE_entityAlias

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntityAlias" ):
                listener.enterEntityAlias(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntityAlias" ):
                listener.exitEntityAlias(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEntityAlias" ):
                return visitor.visitEntityAlias(self)
            else:
                return visitor.visitChildren(self)




    def entityAlias(self):

        localctx = PlantUMLERParser.EntityAliasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_entityAlias)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(PlantUMLERParser.AS)
            self.state = 65
            self.match(PlantUMLERParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnName(self):
            return self.getTypedRuleContext(PlantUMLERParser.ColumnNameContext,0)


        def columnType(self):
            return self.getTypedRuleContext(PlantUMLERParser.ColumnTypeContext,0)


        def columnMarkers(self):
            return self.getTypedRuleContext(PlantUMLERParser.ColumnMarkersContext,0)


        def columnStereotype(self):
            return self.getTypedRuleContext(PlantUMLERParser.ColumnStereotypeContext,0)


        def getRuleIndex(self):
            return PlantUMLERParser.RULE_columnDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnDef" ):
                listener.enterColumnDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnDef" ):
                listener.exitColumnDef(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnDef" ):
                return visitor.visitColumnDef(self)
            else:
                return visitor.visitChildren(self)




    def columnDef(self):

        localctx = PlantUMLERParser.ColumnDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_columnDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13 or _la==14:
                self.state = 67
                self.columnMarkers()


            self.state = 70
            self.columnName()
            self.state = 71
            self.match(PlantUMLERParser.T__2)
            self.state = 72
            self.columnType()
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 73
                self.columnStereotype()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnMarkersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PK_MARKER(self, i:int=None):
            if i is None:
                return self.getTokens(PlantUMLERParser.PK_MARKER)
            else:
                return self.getToken(PlantUMLERParser.PK_MARKER, i)

        def VISIBILITY_MARKER(self, i:int=None):
            if i is None:
                return self.getTokens(PlantUMLERParser.VISIBILITY_MARKER)
            else:
                return self.getToken(PlantUMLERParser.VISIBILITY_MARKER, i)

        def getRuleIndex(self):
            return PlantUMLERParser.RULE_columnMarkers

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnMarkers" ):
                listener.enterColumnMarkers(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnMarkers" ):
                listener.exitColumnMarkers(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnMarkers" ):
                return visitor.visitColumnMarkers(self)
            else:
                return visitor.visitChildren(self)




    def columnMarkers(self):

        localctx = PlantUMLERParser.ColumnMarkersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_columnMarkers)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 76
                _la = self._input.LA(1)
                if not(_la==13 or _la==14):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 79 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==13 or _la==14):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PlantUMLERParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return PlantUMLERParser.RULE_columnName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnName" ):
                listener.enterColumnName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnName" ):
                listener.exitColumnName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnName" ):
                return visitor.visitColumnName(self)
            else:
                return visitor.visitChildren(self)




    def columnName(self):

        localctx = PlantUMLERParser.ColumnNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_columnName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(PlantUMLERParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(PlantUMLERParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return PlantUMLERParser.RULE_columnType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnType" ):
                listener.enterColumnType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnType" ):
                listener.exitColumnType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnType" ):
                return visitor.visitColumnType(self)
            else:
                return visitor.visitChildren(self)




    def columnType(self):

        localctx = PlantUMLERParser.ColumnTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_columnType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(PlantUMLERParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnStereotypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stereotypeContent(self):
            return self.getTypedRuleContext(PlantUMLERParser.StereotypeContentContext,0)


        def getRuleIndex(self):
            return PlantUMLERParser.RULE_columnStereotype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnStereotype" ):
                listener.enterColumnStereotype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnStereotype" ):
                listener.exitColumnStereotype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnStereotype" ):
                return visitor.visitColumnStereotype(self)
            else:
                return visitor.visitChildren(self)




    def columnStereotype(self):

        localctx = PlantUMLERParser.ColumnStereotypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_columnStereotype)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(PlantUMLERParser.T__3)
            self.state = 86
            self.stereotypeContent()
            self.state = 87
            self.match(PlantUMLERParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StereotypeContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(PlantUMLERParser.IDENTIFIER)
            else:
                return self.getToken(PlantUMLERParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return PlantUMLERParser.RULE_stereotypeContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStereotypeContent" ):
                listener.enterStereotypeContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStereotypeContent" ):
                listener.exitStereotypeContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStereotypeContent" ):
                return visitor.visitStereotypeContent(self)
            else:
                return visitor.visitChildren(self)




    def stereotypeContent(self):

        localctx = PlantUMLERParser.StereotypeContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stereotypeContent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(PlantUMLERParser.IDENTIFIER)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 90
                self.match(PlantUMLERParser.T__2)
                self.state = 91
                self.match(PlantUMLERParser.IDENTIFIER)
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 92
                    self.match(PlantUMLERParser.T__5)
                    self.state = 93
                    self.match(PlantUMLERParser.IDENTIFIER)
                    self.state = 98
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationshipContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entityName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PlantUMLERParser.EntityNameContext)
            else:
                return self.getTypedRuleContext(PlantUMLERParser.EntityNameContext,i)


        def relationSymbol(self):
            return self.getTypedRuleContext(PlantUMLERParser.RelationSymbolContext,0)


        def cardinality(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PlantUMLERParser.CardinalityContext)
            else:
                return self.getTypedRuleContext(PlantUMLERParser.CardinalityContext,i)


        def relationshipLabel(self):
            return self.getTypedRuleContext(PlantUMLERParser.RelationshipLabelContext,0)


        def getRuleIndex(self):
            return PlantUMLERParser.RULE_relationship

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationship" ):
                listener.enterRelationship(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationship" ):
                listener.exitRelationship(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationship" ):
                return visitor.visitRelationship(self)
            else:
                return visitor.visitChildren(self)




    def relationship(self):

        localctx = PlantUMLERParser.RelationshipContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_relationship)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.entityName()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15 or _la==22:
                self.state = 102
                self.cardinality()


            self.state = 105
            self.relationSymbol()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15 or _la==22:
                self.state = 106
                self.cardinality()


            self.state = 109
            self.entityName()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 110
                self.relationshipLabel()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CardinalityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CARDINALITY(self):
            return self.getToken(PlantUMLERParser.CARDINALITY, 0)

        def STRING(self):
            return self.getToken(PlantUMLERParser.STRING, 0)

        def getRuleIndex(self):
            return PlantUMLERParser.RULE_cardinality

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCardinality" ):
                listener.enterCardinality(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCardinality" ):
                listener.exitCardinality(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCardinality" ):
                return visitor.visitCardinality(self)
            else:
                return visitor.visitChildren(self)




    def cardinality(self):

        localctx = PlantUMLERParser.CardinalityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_cardinality)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            _la = self._input.LA(1)
            if not(_la==15 or _la==22):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationSymbolContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ONE_TO_ONE(self):
            return self.getToken(PlantUMLERParser.ONE_TO_ONE, 0)

        def ONE_TO_MANY(self):
            return self.getToken(PlantUMLERParser.ONE_TO_MANY, 0)

        def MANY_TO_MANY(self):
            return self.getToken(PlantUMLERParser.MANY_TO_MANY, 0)

        def MANY_TO_ONE(self):
            return self.getToken(PlantUMLERParser.MANY_TO_ONE, 0)

        def SIMPLE_RELATION(self):
            return self.getToken(PlantUMLERParser.SIMPLE_RELATION, 0)

        def getRuleIndex(self):
            return PlantUMLERParser.RULE_relationSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationSymbol" ):
                listener.enterRelationSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationSymbol" ):
                listener.exitRelationSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationSymbol" ):
                return visitor.visitRelationSymbol(self)
            else:
                return visitor.visitChildren(self)




    def relationSymbol(self):

        localctx = PlantUMLERParser.RelationSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_relationSymbol)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2031616) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationshipLabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
